<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment"
    android:background="@color/transparent_black">

    <TextView
        android:id="@+id/login_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/login_welcome_text"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:text="@string/login_string"
        android:textSize="20sp"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/login_password_forgotten_button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:text="@string/login_password_forgotten_string"
        android:textSize="15sp"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/login_actually_no_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_actually_no_text"
        android:textSize="20sp"
        android:theme="@style/button_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />

    <EditText
        android:id="@+id/login_email_address"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/login_email_string"
        android:ems="10"
        android:textSize="19sp"
        android:inputType="textEmailAddress"
        android:theme="@style/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27"
        android:autofillHints="emailAddress" />
    <requestFocus />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/login_password_string"
        android:ems="10"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:theme="@style/edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42000002"
        android:autofillHints="password" />
    <requestFocus />

    <Button
        android:id="@+id/login_resend_button"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="@string/login_resend_button_string"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/login_email_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_greeting" />

</androidx.constraintlayout.widget.ConstraintLayout>