...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <Button
        android:id="@+id/send_mail_button"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:text="@string/send_mail_button_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


    <EditText
        android:id="@+id/change_password_email_address"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:maxWidth="4dp"
        android:hint="@string/login_email_string"
        android:ems="10"
        android:textSize="20sp"
...
